# himalaya-forms

./: .gitignore  ReadMe.md  project.org
develop/: develop.org
develop/himalaya-forms/: hmlforms.org
explore/: explore.org
learn/: learn.org
parbati/: parbati.org
parbati/develop/: develop.org
parbati/explore/ecology/fauna/birds/: birds.org
parbati/mapping/: mapping.org
parbati/observe/: observe.org
parbati/observe/landscape/: landscape.org
parbati/reconstruct/: landscapes.org  reconstruct.org
parbati/reconstruct/geology/: geology.org
parbati/reconstruct/map/: mapping.org
parbati/reconstruct/visualize/: vizalg.org  vizpy.org
parbati/reconstruct/visualize/Landscapes/: develop.org  landscapes.org
parbati/reconstruct/visualize/Landscapes/config/: default_scene.yaml
parbati/reconstruct/visualize/Landscapes/include/: application.hpp  camera.hpp  clouds.hpp  file_utils.hpp  glad_wrapper.hpp  height_map.hpp  input_handler.hpp  mesh_utils.hpp  noise_generator.hpp  opengl_includes.hpp  path_config.hpp.in  scene.hpp  scene_config.hpp  shader_manager.hpp  sky_system.hpp  terrain.hpp  terrain_renderer.hpp  texture_manager.hpp  ui_manager.hpp  vegetation.hpp  water.hpp  window.hpp  yaml.hpp
parbati/reconstruct/visualize/Landscapes/source/apps/: main.cpp
parbati/reconstruct/visualize/Landscapes/source/core/: application.cpp  input_handler.cpp  scene_config.cpp  ui_manager.cpp  window.cpp
parbati/reconstruct/visualize/Landscapes/source/landscape/: clouds.cpp  height_map.cpp  scene.cpp  sky_system.cpp  terrain.cpp  vegetation.cpp  water.cpp
parbati/reconstruct/visualize/Landscapes/source/rendering/: terrain_renderer.cpp
parbati/reconstruct/visualize/Landscapes/source/utilities/: camera.cpp  file_utils.cpp  mesh_utils.cpp  noise_generator.cpp  shader_manager.cpp  texture_manager.cpp
parbati/reconstruct/visualize/develop/: cmake.org  develop.org  main.org
parbati/reconstruct/visualize/develop/core/: application.org  config.org  core.org  default_scene.yaml  scene_graph.org  window.org
parbati/reconstruct/visualize/develop/learn/: main.cpp  opengl.org
parbati/reconstruct/visualize/develop/utilities/: logger.org
parbati/src/cpp/Landscapes/: CMakeLists.txt
parbati/src/cpp/Landscapes/config/: default_scene.yaml
parbati/src/cpp/Landscapes/debug/glad_test/: CMakeLists.txt  test_glad.cpp
parbati/src/cpp/Landscapes/include/core/: application.hpp  scene_config.hpp  window.hpp
parbati/src/cpp/Landscapes/include/templates/: yaml.hpp
parbati/src/cpp/Landscapes/include/utilities/: logger.hpp
parbati/src/cpp/Landscapes/source/apps/: main.cpp
parbati/src/cpp/Landscapes/source/core/: application.cpp  scene_config.cpp  window.cpp
parbati/src/cpp/Landscapes/source/utilities/: logger.cpp
parbati/utils/: utils.org
parbati/visualization/: visualize.org
parbati/visualization/MountainViz/: CMakeLists.txt
parbati/visualization/MountainViz/configure/: configure.yaml
parbati/visualization/MountainViz/include/: Config.h  glm_wrapper.h
parbati/visualization/MountainViz/src/: Config.cpp  main.cpp
parbati/visualization/MountainViz/src/renderer/: OpenGLRenderer.cpp  Renderer.h
parbati/visualization/MountainViz/src/terrain/: ProceduralTerrain.cpp  ProceduralTerrain.h
